# Apex-Legends-API-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: crates_io.yml  rust.yml
src/: data_types.rs  http.rs  lib.rs
tests/: test.rs
