[package]
name = "apex_legends"
description = "An API wrapper for the MozambiqueHe.re Apex Legends API."
version = "0.1.0"
edition = "2018"
author = "KasprDev <kasprdev@gmail.com>"
repository = "https://github.com/KasprDev/Apex-Legends-API-Rust"
keywords = ["apex_legends", "apex", "game", "video_game", "api"]
categories = ["api-bindings", "asynchronous"]
exclude = ["src/main.rs"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"