[package]
name = "apex_legends_api"
description = "An API wrapper for the MozambiqueHe.re Apex Legends API."
version = "0.1.4"
edition = "2018"
authors = ["KasprDev <kasprdev@gmail.com>", "margual56 <marcos56@mailbox.org>"]
repository = "https://github.com/margual56/Apex-Legends-API-Rust"
keywords = ["apex_legends", "apex", "game", "video_game", "api"]
categories = ["api-bindings", "asynchronous"]
exclude = ["src/main.rs", ".github/"]
license = "MIT"
readme = "README.md"


[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
dotenv = "0.15.0"
